fixed layout issue with footer

--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,8 @@ body {
         font-size: 2.5rem;
     }
 }
+/* .container-fluid{
+    padding-left: 0rem;
+    padding-right: 0rem;
+    overflow: hidden;
+  } */
